--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,7 +10,12 @@
     <h1>Digits Neural Network</h1>
 </div>
 <div class="container">
-    <div class="canvas"></div>
+    <div class="canvas-container">
+        <div class="options">
+            <button id="reset">Reset Canvas</button>
+        </div>
+        <div class="canvas"></div>
+    </div>
     <div class="neural-network"></div>
 </div>
 </body>
