Colour and styling changes.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="header">
-    <h1>Digits Neural Network</h1>
+    Digits Neural Network
 </div>
 <div class="container">
     <div class="canvas-container">
