Basic structure of the neural network.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,7 +16,27 @@
         </div>
         <div class="canvas"></div>
     </div>
-    <div class="neural-network"></div>
+    <div class="neural-network">
+        <canvas id="network-lines"></canvas>
+        <div class="hidden-layer">
+            <div class="node"></div>
+            <div class="node"></div>
+            <div class="node"></div>
+            <div class="node"></div>
+            <div class="node"></div>
+        </div>
+        <div class="hidden-layer">
+            <div class="node"></div>
+            <div class="node"></div>
+            <div class="node"></div>
+            <div class="node"></div>
+        </div>
+        <div class="hidden-layer">
+            <div class="node"></div>
+            <div class="node"></div>
+            <div class="node"></div>
+        </div>
+    </div>
 </div>
 </body>
 <script src="script.js"></script>
